[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thm-enterprise"
dynamic = ["version"]
description = "Pythonic client for the TryHackMe Enterprise API"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["tryhackme", "api", "cybersecurity", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/voidstarr/thm-enterprise"
Documentation = "https://github.com/voidstarr/thm-enterprise#readme"
Issues = "https://github.com/voidstarr/thm-enterprise/issues"

[project.optional-dependencies]
dev = ["pytest", "responses"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
